--- a/src/app/modules/category-list/category-list.page.scss
+++ b/src/app/modules/category-list/category-list.page.scss
@@ -53,21 +53,22 @@ ion-card{
         .title {
           position: absolute;
           bottom: 30px;
-          right: 13px;
+          // right: 13px;
           color: white;
           p {
-            font-size: 14px;
+          //  font-size: 14px;
             margin: 0px;
-            font-family: "Cairo-Bold";
+          //  font-family: "Cairo-Bold";
           }
+          margin-bottom: 4px;
         }
     
         .location {
           position: absolute;
           bottom: 5px;
-          right: 10px;
-          font-size: 14px;
-          font-family: "Cairo-Regular";
+          //right: 10px;
+         // font-size: 14px;
+          //font-family: "Cairo-Regular";
           ion-icon {
             font-size: 20px;
           }
@@ -75,11 +76,11 @@ ion-card{
     
         .location-address {
           position: absolute;
-          color: white;
-          font-family: "Cairo-Regular";
-          font-size: 14px;
+         // color: white;
+          // font-family: "Cairo-Regular";
+          // font-size: 14px;
           bottom: 9px;
-          right: 30px;
+        //  right: 30px;
           p {
             margin: 0px;
           }
@@ -88,7 +89,7 @@ ion-card{
         .address-detail {
           position: absolute;
           bottom: 5px;
-          left: 10px;
+          //left: 10px;
           ion-icon {
             font-size: 25px;
           }
