--- a/src/app/components/custom-details/custom-details.component.html
+++ b/src/app/components/custom-details/custom-details.component.html
@@ -1,4 +1,4 @@
-<div class="item-details" [ngClass]="isDetailed ? 'details' : 'notdetails'">
+<div class="item-details" >
   <div class="name-rating-container">
     <div class="name">
       <h5 class="fn-16 dalel-Bold"> {{ reservationDetails.name }}</h5>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="address-price-container">
-    <ion-item lines="none" class="address">
+    <ion-item lines="none" class="address" [ngClass]="isDetailed ? 'details' : ''">
       <ion-label>
         <p class="fn-14 dalel-Regular dark-black-color">
            {{ reservationDetails.city }} - {{ reservationDetails.address }}
