--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -1,7 +1,9 @@
-
-
-<app-header title='{{categoryName|translate}}' [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false"></app-header>
-
+<app-header
+  title="{{categoryName|translate}}"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+></app-header>
 
 <ion-content class="ion-padding">
   <ion-card
@@ -11,20 +13,32 @@
   >
     <div class="container">
       <img src="./../../../assets/images/1024-500.png" />
-
-      <div class="title">
-        <p> {{cat.name}} </p>
+      <div
+        class="title"
+        [ngStyle]="currentlangauge=='ar'?{'right': '13px'} : {'left': '13px'}"
+      >
+        <p class="fn-14 dalel-Bold white-color">{{cat.name}}</p>
       </div>
 
-      <div class="location">
+      <div
+        class="location"
+        [ngStyle]="currentlangauge=='ar'?{'right': '10px'} : {'left': '10px'}"
+      >
         <ion-icon name="location-sharp" color="primary"></ion-icon>
       </div>
 
-      <div class="location-address">
-        <p>الرياض</p>
+      <div
+        class="location-address "
+        [ngStyle]="currentlangauge=='ar'?{'right': '30px'} : {'left': '30px'}"
+      >
+        <p class="fn-14 dalel-Regular white-color">{{cat.location}}</p>
       </div>
 
-      <div class="address-detail" routerLink="/tabs/main/category-details">
+      <div
+        class="address-detail"
+        [ngStyle]="currentlangauge=='ar'?{'left': '10px'} : {'right': '10px'}"
+        routerLink="/tabs/main/category-details"
+      >
         <ion-icon name="arrow-forward-circle-outline" color="white"></ion-icon>
       </div>
     </div>
