--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs #tabs (ionTabsDidChange)="setCurrentTab()">
   <ion-tab-bar slot="bottom">
-    <ion-tab-button [ngClass]="selectedTab==tab.tabName?'selected':''" class="tab-item"[tab]="tab.tabName" *ngFor="let tab of tabsData">
+    <ion-tab-button [ngClass]="selectedTab==tab.tabName?'selected':''" [tab]="tab.tabName" *ngFor="let tab of tabsData">
       <ion-icon
         [src]="selectedTab==tab.tabName? tab.tabActiveIcon:tab.tabNotActiveIcon"
       ></ion-icon>
