--- a/src/app/modules/tabs/tabs.page.scss
+++ b/src/app/modules/tabs/tabs.page.scss
@@ -4,21 +4,32 @@ ion-label {
   color: var(--ion-color-secondary);
 }
 
-.selected::after {
-  width: 14px;
-  height: 14px;
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  top: -9px;
-  right: 42%;
-  background-color: var(--ion-color-primary);
-}
-
 .selected-label {
   color: var(--ion-color-primary);
 }
 
-.tab-item {
+ion-tab-button {
   position: relative;
+
+  // default case
+  &::before {
+    background-color: transparent;
+    display: block;
+    content: "";
+    margin: 0 auto;
+    width: 20px;
+    height: 2px;
+  }
+  // selected case
+  &.tab-selected::before {
+    width: 10%;
+    height: 16px;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    top: -17%;
+    right: 45%;
+    margin: 0 auto;
+    background-color: var(--ion-color-primary);
+  }
 }
