--- a/src/app/components/custom-details/custom-details.component.scss
+++ b/src/app/components/custom-details/custom-details.component.scss
@@ -51,6 +51,7 @@
       p {
         display: inline-block;
         margin: 0px;
+        white-space: nowrap;
       }
       ion-icon {
         margin: 0px;
