--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -19,7 +19,7 @@
 
           <ion-card-content>
 
-            <!-- <app-custom-details [reservationDetails]="item"></app-custom-details> -->
+            <!-- <app-custom-details [ItemDetails]="item"></app-custom-details> -->
             <div class="name">
               <p class="fn-14 dalel-Bold dark-black-color">{{item.name}}</p>
             </div>
