--- a/src/app/modules/search-results/search-results.page.html
+++ b/src/app/modules/search-results/search-results.page.html
@@ -24,8 +24,8 @@
 
         <div class="price-container">
           <ion-button disabled='true' color="secondary">
-            <span class="white-color fn-10 dalel-Bold"> {{item.price}} {{item.unit}}
-              /{{item.perUnit}} </span>
+            <span class="white-color fn-10 dalel-Bold"> {{item.price}} {{item.unit|translate}}
+              /{{item.perUnit|translate}} </span>
           </ion-button>
           <ion-button disabled='true' color="primary">
             <div class="rating">
