--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -6,7 +6,12 @@
 ></app-header>
 
 <ion-content class="ion-padding">
-  <ion-card
+  <app-custom-card
+    [itemDetails]="cat"
+    [forwardRoute]="'/tabs/main/categories/'"
+    *ngFor="let cat of categoriesList"
+  ></app-custom-card>
+  <!-- <ion-card
     class="ion-no-margin"
     *ngFor="let cat of categoriesList"
     routerLink="/tabs/main/categories/{{categoryID}}/{{cat.id}}"
@@ -42,5 +47,5 @@
         <ion-icon name="arrow-forward-circle-outline" color="white"></ion-icon>
       </div>
     </div>
-  </ion-card>
+  </ion-card> -->
 </ion-content>
