--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -90,29 +90,31 @@
       [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     >
       <ng-template swiperSlide *ngFor="let item of categoryItems">
-        <ion-card
+        <!-- <ion-card
           class="ion-no-margin"
           routerLink="/tabs/main/categories/1/{{item.id}}"
         >
           <div class="container">
             <img [src]="item.image" />
-            <div class="title">
-              <p>{{item.name}}</p>
+            <div class="title"  [ngStyle]="currentlangauge=='ar'?{'right': '13px'} : {'left': '13px'}">
+              <p class="fn-14 dalel-Bold white-color">{{item.name}}</p>
             </div>
-            <div class="location">
+            <div class="location"  [ngStyle]="currentlangauge=='ar'?{'right': '10px'} : {'left': '10px'}">
               <ion-icon name="location-sharp" color="primary"></ion-icon>
             </div>
-            <div class="location-address">
-              <p>{{item.location}}</p>
+            <div class="location-address" [ngStyle]="currentlangauge=='ar'?{'right': '30px'} : {'left': '30px'}">
+              <p class="fn-14 dalel-Regular white-color">{{item.location}}</p>
             </div>
-            <div class="address-detail">
+            <div class="address-detail" [ngStyle]="currentlangauge=='ar'?{'left': '10px'} : {'right': '10px'}">
               <ion-icon
                 name="arrow-forward-circle-outline"
                 color="white"
               ></ion-icon>
             </div>
           </div>
-        </ion-card>
+        </ion-card> -->
+
+        <app-custom-card [itemDetails]="item" [forwardRoute]="'/tabs/main/categories/'"></app-custom-card>
       </ng-template>
     </swiper>
   </div>
