--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -77,7 +77,7 @@
       </div>
       <div>
         <p class="fn-14 dalel-Bold primary-color">
-          {{ItemDetails.price}} {{ItemDetails.unit}}
+          {{ItemDetails.price}} {{ItemDetails.unit|translate}}
         </p>
       </div>
     </div>
