--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -1,7 +1,7 @@
 <app-header
   [title]="'reservation'"
   [isEditable]="false"
-  [backwardRoute]="'/tabs/my-reservations'"
+  [backwardRoute]="'/tabs/main/reservation'"
   [isMain]="false"
 ></app-header>
 <ion-content class="ion-padding">
