--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -1,6 +1,8 @@
-<app-header [title]="'main'" [isMain]="true"></app-header>
+<app-header style="height: 140px;" [title]="'main'" [isMain]="true"></app-header>
 
 <ion-content>
+
+ 
   <div class="search-section ion-padding-horizontal">
     <div class="search-input">
       <ion-item lines="none" class="search-wrapper">
