--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -37,7 +37,7 @@
 
 
         <div class="price">
-          <p class="fn-15 dalel-SemiBold white-color">{{item.price}}   {{item.perUnit|translate}}/ {{item.unit|translate}}</p>
+          <p class="fn-15 dalel-SemiBold secondary-color">{{item.price}}   {{item.perUnit|translate}}/ {{item.unit|translate}}</p>
         </div>
 
         <div class="title"  [ngStyle]="currentlangauge=='ar'?{'right': '13px'} : {'left': '13px'}">
