--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -30,7 +30,7 @@
 
       <p class="arrival fn-14 dalel-Regular">
         <span>
-          {{"arrival-date"|translate}} :{{ItemDetails.leftTime}}
+          {{"arrival-date"|translate}} :{{ItemDetails.arrivalDate}}
         </span>
       </p>
     </div>
@@ -47,7 +47,7 @@
 
       <p class="arrival fn-14 dalel-Regular">
         <span>
-          {{"arrival-date"|translate}} :{{ItemDetails.leftDate}}
+          {{"left-date"|translate}} :{{ItemDetails.leftDate}}
         </span>
       </p>
     </div>
