--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2122,6 +2122,9 @@ button.swiper-pagination-bullet {
   backface-visibility: hidden;
   overflow: hidden;
 }
+ion-card {
+  box-shadow: none;
+}
 :root[dir=rtl] ion-menu::part(container) {
   border-radius: 80px 0px 0px 0px;
 }
