--- a/src/global.scss
+++ b/src/global.scss
@@ -41,7 +41,9 @@
 @import "~@ionic/angular/css/flex-utils.css";
 @import "~swiper/css";
 @import "~swiper/css/bundle";
-
+// ion-card{
+//   box-shadow: none;
+// }
 :root[dir="rtl"] {
   ion-menu::part(container) {
     border-radius: 80px 0px 0px 0px;
