guards +style refactor

--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -1,6 +1,5 @@
 ion-content.background {
-  --background: url(./../../../../assets/images/authBg-right.png) 0 0 /100% 100%
-    no-repeat;
+  --background: url(./../../../../assets/images/authBg-right.png) no-repeat 100% 100%;
 }
 .auth-form ion-item {
   margin-bottom: 0px !important;
