--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -32,7 +32,7 @@
       <p class="fn-14 dalel-Regular secondary-color">450 م</p>
     </div>
     <div>
-      <ion-icon src="./../../../assets/icon/icon4.svg"></ion-icon>
+      <ion-icon src="./../../../assets/icon/bed.svg"></ion-icon>
       <p class="fn-14 dalel-Regular secondary-color">10 غرف</p>
     </div>
     <div>
