--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -4,8 +4,8 @@
   [backwardRoute]="'/tabs/main'"
   [isMain]="false"
 ></app-header>
-<ion-content class="ion-padding">
-  <ion-grid>
+<ion-content class="custom-padding">
+  <ion-grid >
     <ion-row>
       <ion-col
         sizeXs="6"
