--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,11 +1,11 @@
 
 
-ion-header{
-  background-color: #fbeee3;
-  --min-height: 120px !important;
-}
+// ion-header{
+//   background-color: #fbeee3;
+//   --min-height: 120px !important;
+// }
 ion-toolbar {
---background: url("./../../../assets/images/wave50.jpg") no-repeat 100% 100% !important;
+  --background: url("./../../../assets/images/wave00.png") no-repeat 100% 100% !important;
   //--background: url("./../../../assets/images/header.svg") !important;
   background-size: cover;
   background-position: center center;
