--- a/src/app/modules/auth/phone-number/phone-number.page.scss
+++ b/src/app/modules/auth/phone-number/phone-number.page.scss
@@ -1,4 +1,3 @@
 ion-content.background {
-    --background: url(./../../../../assets/images/authBg-right.png) 0 0 /100% 100%
-      no-repeat;
+    --background: url(./../../../../assets/images/authBg-right.png) no-repeat 100% 100%;
   }
