--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -2,7 +2,8 @@
   <swiper
     #swiper
     [config]="config"
-    [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'" (slideChange)="swiperSlideChanged($event)"
+    [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
+    (slideChange)="swiperSlideChanged($event)"
   >
     <ng-template swiperSlide *ngFor="let i of [{},{},{}]">
       <div class="boarding">
@@ -10,27 +11,21 @@
 
         <p class="boardng-subtitle">{{"test_subtitle"|translate}}</p>
 
-        <!-- <ion-row [ngClass]="currentlangauge=='ar' ? '':'custom-row'">
-          <ion-col size="10">
-            <ion-button [disabled]="slidingNotAvailable" expand="block" class="btn-custom" (click)="nextSlide($event)" >
-              <span>{{"next"|translate}}</span>
-            </ion-button>
-          </ion-col>
-
-          <ion-col text-center size="2" (click)="skipBoarding()">
-            <div class="ion-text-center skip">
-              <span> {{"skip"|translate}} </span>
-            </div>
-          </ion-col>
-        </ion-row> -->
-
-        <div class="boarding-buttons" [ngClass]="currentlangauge=='ar' ? '':'custom-row'">
+        <div
+          class="boarding-buttons"
+          [ngClass]="currentlangauge=='ar' ? '':'custom-row'"
+        >
           <div>
-            <ion-button [disabled]="slidingNotAvailable" expand="block" class="btn-custom" (click)="nextSlide($event)" >
+            <ion-button
+              [disabled]="slidingNotAvailable"
+              expand="block"
+              class="btn-custom"
+              (click)="nextSlide($event)"
+            >
               <span>{{"next"|translate}}</span>
             </ion-button>
           </div>
-          <div  (click)="skipBoarding()">
+          <div (click)="skipBoarding()">
             <div class="ion-text-center skip">
               <span> {{"skip"|translate}} </span>
             </div>
