--- a/src/app/modules/auth/login-register/login-register.page.scss
+++ b/src/app/modules/auth/login-register/login-register.page.scss
@@ -1,9 +1,10 @@
 ion-content.bg-left {
-  --background: url(./../../../../assets/images/authBg-left.png) no-repeat 100% 100%;
+  --background: url(./../../../../assets/images/authBg-left.png) 0 0 /100% 100% no-repeat;
 }
 
 ion-content.bg-right {
-  --background: url(./../../../../assets/images/authBg-right.png)no-repeat 100% 100%;
+  --background: url(./../../../../assets/images/authBg-right.png) 0 0 /100% 100%
+    no-repeat;
 }
 
 
