--- a/src/app/modules/language/language.page.scss
+++ b/src/app/modules/language/language.page.scss
@@ -1,5 +1,5 @@
 ion-content.background {
-  --background: url(../../../assets/images/bg.svg) no-repeat 100% 100%;
+  --background: url(../../../assets/images/bg.svg) center center/cover no-repeat;
 }
 
 
