--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
@@ -1,5 +1,6 @@
 ion-content.background {
-  --background: url(./../../../../assets/images/boarding.svg) no-repeat 100% 100%;
+  --background: url(./../../../../assets/images/boarding.svg) center
+    center/cover no-repeat;
 }
 
 :root[dir="rtl"] {
