--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,12 @@
+
 ion-toolbar {
-  --background:  // url("./../../../assets/images/wave00.png") no-repeat 100% 100% !important;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  --min-height: 139px !important;
+
+  --background: #ffeee3;
+  position: relative;
+  // background-size: cover;
+  // background-position: center center;
+  // background-repeat: no-repeat;
+  --min-height: 140px !important;
   --padding-end: 0px !important;
   --padding-start: 0px !important;
   --opacity: 1 !important;
@@ -25,45 +28,13 @@ ion-toolbar {
     ion-icon {
       font-size: 40px !important;
     }
+
+   
+  }
+  &::after {
+    content: url("./../../../assets/images/wave00.png");
+    position: absolute;
+    bottom: 0;
+    //background-image: url("./../../../assets/images/wave00.png") ;
   }
 }
-// section {
-//   position: relative;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   min-height: 100px;
-
-//   background: #fbeee3;
-// }
-
-// .curve {
-//   position: absolute;
-//   height: 140px;
-//   width: 100%;
-//   bottom: 0;
-//   text-align: center;
-// }
-
-// .curve::before {
-//   content: "";
-//   display: block;
-//   position: absolute;
-//   border-radius: 55% 50%;
-//   width: 65%;
-//   height: 107%;
-//   transform: translate(-66%, 75%);
-//   background-color: white;
-// }
-
-// .curve::after {
-//   content: "";
-//   display: block;
-//   position: absolute;
-//   border-radius: 100% 50%;
-//   width: 78%;
-//   height: 100%;
-//   background-color: #fbeee3;
-//   transform: translate(30%, 12%);
-//   z-index: 1;
-// }
