--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -28,7 +28,7 @@
       <p class="fn-14 dalel-Regular secondary-color">{{"chalet"|translate}}</p>
     </div>
     <div>
-      <ion-icon src="./../../../assets/icon/icon1.svg"></ion-icon>
+      <ion-icon src="./../../../assets/icon/space.svg"></ion-icon>
       <p class="fn-14 dalel-Regular secondary-color">450 م</p>
     </div>
     <div>
